<resources>
    <string name="app_name">proyectofinal</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valTareasFragment">Tareas</string>
    <string name="valEventosFragment">Eventos</string>
    <string name="valExamenesFragment">Exámenes</string>
    <string name="valReunionFragment">Reunión de Padres</string>
    <string name="valRecursosFragment">Recursos Educativos</string>
    <string name="valAjustesFragment">Ajustes de Usuario</string>
    <string name="val_email">Correo electronico</string>
    <string name="val_contra">Contraseña</string>
    <string name="val_login">Iniciar sesión</string>
    <string name="val_regis">Crear cuenta nueva</string>
    <string name="val_nombre">Nombres</string>
    <string name="val_dni">Doc. Identidad</string>
    <string name="val_fecha">Fecha Nac.</string>
    <string name="val_telef">Nu. de telefono</string>
    <string name="val_regi">Crear cuenta</string>
    <string name="val_cancel">Cancelar</string>
    <string name="rscbRecordarUsuario">Recordar Uusario</string>
    <string name="tvtTnh">Nombre Hijo:</string>
    <string name="tvtCat">"Categoría: "</string>
    <string name="tvtFecha">"Fecha : "</string>
    <string name="tvEFecha">Fecha:</string>
    <string name="tvtDesc">"Descripción: "</string>
    <string name="tvttCurso">"Curso: "</string>
    <string name="val_cerrar">Cerrar Sesion</string>
</resources>