<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tareasFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/valTareasFragment" />
        <item
            android:id="@+id/examenesFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/valExamenesFragment" />
        <item
            android:id="@+id/eventosFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/valEventosFragment" />
        <item
            android:id="@+id/reunionFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/valReunionFragment" />
        <item
            android:id="@+id/recursosFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/valRecursosFragment" />
        <item
            android:id="@+id/ajustesFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/valAjustesFragment" />
    </group>
</menu>